<resources>
    <string name="app_name">Share Recipes</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="main_share_app">"Hey check out our app at: https://play.google.com/store/apps/details?id="</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_likes">My Like</string>
    <string name="menu_my_posts">My Post</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_share">Share</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_search">"Search Recipes"</string>

    <string name="main_sign_in">Sign In</string>
    <string name="main_feedback_subject">"[Share Recipes] Feedback From User"</string>

    <string name="dialog_add_post_title">"New Post"</string>
    <string name="dialog_add_post_title_hint">"Post Title:"</string>
    <string name="dialog_add_post_title_error">"Post Title cannot empty"</string>
    <string name="dialog_add_post_description_hint">"Post Description:"</string>
    <string name="dialog_add_post_description_error">"Post Description cannot empty"</string>
    <string name="dialog_add_post_poster_hint">"Poster:"</string>
    <string name="dialog_add_post_poster_error">"Poster cannot empty"</string>
    <string name="dialog_add_post_food_ingredients_hint">"Food Ingredients:"</string>
    <string name="dialog_add_post_food_ingredients_error">"Food Ingredients cannot empty"</string>
    <string name="dialog_add_post_cooking_recipe_hint">"Cooking Recipe:"</string>
    <string name="dialog_add_post_cooking_recipe_error">"Cooking Recipe cannot empty"</string>
    <string name="dialog_add_post_tag_categories_hint">"Tag Categories"</string>
    <string name="dialog_add_post_tag_categories_error">"Tag Categories cannot empty"</string>
    <string name="dialog_add_post_cancel">"Cancel"</string>
    <string name="dialog_add_post_add">"Add"</string>
    <string name="dialog_add_post_update">"Update"</string>

    <string name="dialog_add_tag_title">"Select Tags"</string>
    <string name="dialog_add_tag_btn_cancel">"Cancel"</string>
    <string name="dialog_add_tag_btn_add">"Add"</string>

    <string name="detail_post_share">"Share"</string>
    <string name="detail_post_like">"Like"</string>
    <string name="detail_post_share_title_post">"We have great recipes: "</string>
    <string name="detail_post_share_title_download">"Download our app at: https://play.google.com/store/apps/details?id="</string>
    <string name="detail_post_1_rating_post">"User Rating: %.1f/5 (%d vote)"</string>
    <string name="detail_post_rating_post">"User Rating: %.1f/5 (%d votes)"</string>

    <string name="my_post_delete_title">"Delete Post"</string>
    <string name="my_post_delete_message">"Are you sure?"</string>
</resources>