<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_likes"
            android:icon="@drawable/ic_likes"
            android:title="@string/menu_my_likes" />
        <item
            android:id="@+id/nav_my_posts"
            android:icon="@drawable/ic_posts"
            android:title="@string/menu_my_posts" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_suggestion_mail"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/menu_sign_out" />
    </group>
</menu>