<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/background_tool_bar_color"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/layout_padding"
        android:text="@string/dialog_add_post_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dialog_add_post_title_hint"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:hint="@string/dialog_add_post_title_hint"
                android:imeOptions="actionNext"
                android:padding="@dimen/layout_padding"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/input_text_color"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dialog_add_post_description_hint"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:hint="@string/dialog_add_post_description_hint"
                android:imeOptions="actionNext"
                android:padding="@dimen/layout_padding"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/input_text_color"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dialog_add_post_poster_hint"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:hint="@string/dialog_add_post_poster_hint"
                android:imeOptions="actionNext"
                android:padding="@dimen/layout_padding"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/input_text_color"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dialog_add_post_food_ingredients_hint"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_food_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:hint="@string/dialog_add_post_food_ingredients_hint"
                android:imeOptions="actionNext"
                android:padding="@dimen/layout_padding"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/input_text_color"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dialog_add_post_cooking_recipe_hint"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_cooking_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:hint="@string/dialog_add_post_cooking_recipe_hint"
                android:imeOptions="actionNext"
                android:padding="@dimen/layout_padding"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/input_text_color"
                android:textSize="@dimen/text_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/dialog_add_post_tag_categories_hint"
                    android:textColor="@color/input_text_title_color"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_select_tag_categories"
                    android:layout_width="?android:attr/actionBarSize"
                    android:layout_height="?android:attr/actionBarSize"
                    android:padding="@dimen/layout_padding"
                    android:src="@drawable/ic_pen" />
            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/ll_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:paddingStart="@dimen/layout_padding"
                    android:paddingEnd="@dimen/layout_padding"
                    android:text="@string/dialog_add_post_cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:paddingStart="@dimen/layout_padding"
                    android:paddingEnd="@dimen/layout_padding"
                    android:text="@string/dialog_add_post_add"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>