<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/background_tool_bar_color"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/layout_padding"
        android:text="@string/dialog_add_tag_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_control"
        android:layout_below="@+id/tv_title"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:background="@color/page_background"/>

    <LinearLayout
        android:id="@+id/ll_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding"
            android:text="@string/dialog_add_tag_btn_cancel"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding"
            android:text="@string/dialog_add_tag_btn_add"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>