<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/background_tool_bar_color"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:padding="@dimen/layout_padding"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/iv_home"
            android:layout_toEndOf="@+id/iv_back"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/layout_padding"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            tools:text="Mon Ngon Moi Ngay" />

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/layout_padding"
            android:src="@drawable/ic_home" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_tool_bar"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_post_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_weight="1"
            android:background="@color/button_text_background_start_color"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:padding="@dimen/layout_padding"
                android:src="@drawable/ic_share"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:text="@string/detail_post_share"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_post_like"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_weight="1"
            android:background="@color/button_text_background_start_color"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_post_like"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:padding="@dimen/layout_padding"
                android:src="@drawable/ic_not_likes"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:text="@string/detail_post_like"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_control"
        android:background="@color/page_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                tools:text="Cai be xanh nhoi thit hap" />

            <TextView
                android:id="@+id/tv_post_total_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                tools:text="5/10 (25 vote)" />

            <TextView
                android:id="@+id/tv_post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_normal"
                tools:text="Cai be xanh nhoi thit hap" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H,2:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/dialog_add_post_food_ingredients_hint"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_food_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_normal"
                android:textStyle="normal"
                tools:text="Cai be xanh nhoi thit hap" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/dialog_add_post_cooking_recipe_hint"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cooking_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/input_text_title_color"
                android:textSize="@dimen/text_normal"
                android:textStyle="normal"
                tools:text="Cai be xanh nhoi thit hap" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:numStars="5"
                android:stepSize="0.5" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>